# libHSC

./: .gitignore  CLAUDE.md  CMakeLists.txt  HAZARDS.md  README.md  handoff_arithmetic.md  handoff_parametric.md
bench/: CMakeLists.txt  README.md
cmake/: hsc_deps.cmake
doc/: hsc_manual.md
examples/: CMakeLists.txt  README.md  hanoi.cc  hsc.cc  philosophers.cc
examples/divine/: README.md  status.tsv
examples/divine/hsc/: adding.3.hsc  adding.4.hsc  adding.6.hsc  at.1.hsc  at.2.hsc  at.3.hsc  at.5.hsc  at.6.hsc  bakery.2.hsc  bakery.3.hsc  bakery.4.hsc  bakery.5.hsc  bakery.6.hsc  bakery.7.hsc  blocks.2.hsc  blocks.3.hsc  bopdp.1.hsc  bopdp.2.hsc  bopdp.3.hsc  bridge.2.hsc  bridge.3.hsc  brp.1.hsc  brp.3.hsc  brp.5.hsc  brp2.3.hsc  brp2.4.hsc  brp2.5.hsc  cambridge.5.hsc  cambridge.6.hsc  collision.4.hsc  collision.5.hsc  collision.6.hsc  cyclic_scheduler.1.hsc  cyclic_scheduler.2.hsc  driving_phils.4.hsc  elevator.2.hsc  elevator.3.hsc  elevator2.1.hsc  elevator2.2.hsc  elevator_planning.2.hsc  (+96 more)
examples/mcc/: README.md
examples/models/: altseq.hsc  hanoi3.hsc  ring4.hsc  ring4b.hsc  states.hsc  unbounded.hsc
examples/param/: README.md  hanoipole.hsc
experiments/parametric/: README.md
include/hsc/: README.md  event.hh  query.hh
include/hsc/core/: README.md  algorithm.md  code.hh  diagram.hh  manager.hh  operation.hh  shape.hh  support.hh
include/hsc/dve/: README.md  algorithm.md  ast.hh  to_surface.hh
include/hsc/leaves/: README.md  int_set.hh
include/hsc/lia/: README.md  algorithm.md  expr.hh
include/hsc/mem/: README.md  algorithm.md  cache.hh  handle.hh  id_table.hh  intern.hh  stats.hh
include/hsc/order/: README.md  force.hh
include/hsc/petri/: Arithmetic.hpp  InvariantHelpers.h  MatrixCol.h  PTNetHandler.h  PTNetLoader.h  README.md  Rational.h  SparseArray.h  SparseBoolArray.h  SparsePetriNet.h  decompose.hh  nupn.hh  to_surface.hh
include/hsc/petri/louvain/: README.md  community.h  graph_binary.h  louvain.h  modularity.h  quality.h
include/hsc/surface/: README.md  algorithm.md  expand.hh  expr.hh  sexpr.hh  translate.hh
include/hsc/util/: README.md  errors.hh  hash.hh  timing.hh
python/hsc/: README.md  algorithm.md
python/hsc/examples/: counter.py  philosophers.py  philosophers_bdd.py  quotient.py
python/hsc/hsc/: __init__.py  model.py
python/hsc/hsc/classify/: README.md  __init__.py  algorithm.md  expr.py  query.py
python/hsc/hsc/core/: README.md  __init__.py  algebra.py  algorithm.md  diagram.py  leaf.py  shape.py  stats.py
python/hsc/hsc/leaves/: README.md  __init__.py  algorithm.md  bdd.py  enum.py
python/hsc/hsc/ops/: README.md  __init__.py  algorithm.md  branch.py  combinators.py  hom.py  local.py
python/hsc/tests/: test_algebra.py  test_mutation.py
research_notes/: ddd_to_hsc.md  hsc_core.md  hsc_core2.md  hsc_core3.md  hsc_core4.md  hsc_core5.md  hsc_parametric.md  hsc_parametric_report.md  hsc_spec.md  roadmap.md
samples/: CircadianClock-PT-000001.pnml  ERK-PT-000001.pnml  README.md  Sudoku-PT-AN01.pnml  expected.csv
samples/divine/: README.md  status.tsv
samples/divine/hsc/: adding.1.hsc  adding.2.hsc  adding.3.hsc  adding.4.hsc  adding.5.hsc  adding.6.hsc  at.1.hsc  at.2.hsc  at.3.hsc  at.4.hsc  at.5.hsc  at.6.hsc  at.7.hsc  bakery.1.hsc  bakery.2.hsc  bakery.3.hsc  bakery.4.hsc  bakery.5.hsc  bakery.6.hsc  bakery.7.hsc  bakery.8.hsc  blocks.2.hsc  blocks.3.hsc  blocks.4.hsc  bopdp.1.hsc  bopdp.2.hsc  bopdp.3.hsc  bridge.1.hsc  bridge.2.hsc  bridge.3.hsc  brp.1.hsc  brp.2.hsc  brp.3.hsc  brp.4.hsc  brp.5.hsc  brp.6.hsc  brp2.1.hsc  brp2.2.hsc  brp2.3.hsc  brp2.4.hsc  (+236 more)
samples/divine/runs/: 20260723T143236Z_cb524a6_force.tsv
samples/param/: README.md  hanoi.hsc  mutex.hsc  philo.hsc  rotate.hsc
samples/param/layout/: philo_balanced.hsc  philo_blocked.hsc  philo_rec.hsc  philo_spine.hsc
src/: CMakeLists.txt  README.md  diagram.cc  dve_parser.cc  dve_to_surface.cc  event.cc  force.cc  int_set.cc  lia_bool.cc  lia_int.cc  operation.cc  petri_decompose.cc  petri_nupn.cc  petri_to_surface.cc  query.cc  stats.cc  surface_expand.cc  surface_expr.cc  surface_parser.cc  surface_translate.cc  timing.cc
src/louvain/: community.cpp  graph_binary.cpp  louvain.cpp  modularity.cpp  quality.cpp
tests/: CMakeLists.txt  README.md  collect_its_baseline.sh  compare_beem_baseline.sh  dve_sweep.sh  family_scaling.sh  test_cache.cc  test_event.cc  test_force.cc  test_hash.cc  test_intern.cc  test_lia.cc  test_operations.cc  test_query.cc  test_split_equiv.cc  test_stats.cc  test_timing.cc
tests/logs/: beem_baseline_counts.tsv  its_reach_counts.tsv
tools/: CMakeLists.txt  check_samples.cmake  dve2hsc.cc  hanoi.py  hsc-mcc.cc  hsc.cc  nupn2hsc.cc
